# text_adv

./: .env.example  .gitignore  .pylintrc  AI_AGENT_INTEGRATION_GUIDE.md  LICENSE  LICENSE.txt  README.md  Untitled Diagram.drawio  a.csv  a.py  ad.py  add.py  ai.py  api_keys.yaml  as.py  class.py  config.json  daily_log.txt  data.yaml  debug.py  dialogue.py  example_ai_agent_usage.py  example_delay_usage.py  example_typewriter_usage.py  kl.py  license.md  ll.py  lp.py  main.cpp  main.py  newmenu.py  nn.py  notes.txt  pl.py  pyproject.toml  red.py  requirements.txt  story_test_events.py  test.py  test2.py  (+10 more)
config/: areas_to_expore.yaml
core/: ai.py  ai_agent_helpers.py  atypes.py  core.py  entities.py  explore.py  fight.py  functions.py  keyboard.py  meditate.py  non_blocking_input.py  player.py  sound_player.py  story.py  test_ai.py  timer.py  trail.py
data/: ai_generation_rules.txt  ai_generation_rules.yaml  api_keys.yaml  areas_to_explore.yaml  config.yaml  entities.yaml  events_description.tx.t  gemini_story.yaml  interactions.yaml  items.yaml  new_story.yaml  player.json  player.yaml  radnom.yaml  save_game.yaml  scrolls_notes.yaml  story.yaml  story_dungeon_fall.yaml  structure.txt  structure.yaml  weapons.json  weapons.yaml
input/: keyboard.py
items/: inventory.py  item.py  weapon.py
objects/: ad.py  entities.py  inventory.py  item.py  player.py  weapon.py
src/: are.py  as.py  console.py  entities.py  ev.py  fight.py  file_handler.py  game.py  keyboard.py  logger.py  m.py  main.py  main_layout.py  options.py  player.py  story.yaml  test.py  trial.py  (+2 more)
(+99 files in other folders)
