[project]
name = "text-adv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "pygments==2.19.1",
    "pyyaml==6.0.2",
    "readchar==4.2.1",
    "rich==13.9.4",
    "six==1.17.0",
]
